# imc-prosperity-4

./: .gitignore  Makefile  README.md  pyproject.toml
backtester_archive/prosperity4bt/: __main__.py  data.py
docs/: OPTIMIZATIONS.md
research/: osmium.ipynb  round0.py  round1.ipynb
scripts/: import_rust_run.sh  setup.sh
traders/: trader.py  trader_brute_force.py
viz/: viz.py
