[project]
name = "prosperity4"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "prosperity4btest",
]

[tool.uv.sources]
prosperity4btest = { path = "backtester", editable = true }

[project.optional-dependencies]
research = [
    "matplotlib",
    "numpy",
    "pandas",
    "ipykernel",
    "statsmodels",
]
viz = [
    "dash",
    "plotly",
]
